# QT_simple_RESTAPI_server

./: CMakeLists.txt  README.md  crudhandler.cpp  crudhandler.h  httpconnection.cpp  httpconnection.h  httpparser.cpp  httpparser.h  httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h  httpserver.cpp  httpserver.h  main.cpp  router.cpp  router.h
